# UnsupervisedCellImageSegmentation

./: .gitignore  LICENSE  README.md  pyproject.toml
data/labels/: 12a.txt  12b.txt  12c.txt  12d.txt  12e.txt
src/: __main__.py
src/analysis/: evaluation_analysis.ipynb  image_analysis.ipynb
src/common/: image_utils.py
src/model/: clusterer.py
