[tool.poetry]
name = "unsupervisedml-cell-image-segmentation"
version = "0.1.0"
description = ""
authors = ["PetrFridrich <petr.fridrich.1998@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
opencv-python = "^4.10.0.84"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
